@@ -71,6 +71,9 @@ Cacti CHANGELOG
 -feature: Add additional options to speed data query graph automation process
 -feature: Add additional indexes to speed data query graph creation
 -feature: Allow the cli reindexing of hosts to be limited to a single query
+-feature: Plugin Architecture is now part of main Cacti code
+-feature: api_plugin_db_table_create allows for multi-column indices and more than one key per table
+
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
